<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etGRNo"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:hint="GR No."
                android:inputType="number"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/etLastName"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:layout_toStartOf="@+id/etLastName"
                android:background="@drawable/ic_person_green_24dp"
                android:gravity="center"
                android:labelFor="@+id/etLastName" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etGRNo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:hint="Last name"
                android:inputType="textCapWords|textPersonName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etLastName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:hint="First name"
                android:inputType="textCapWords|textPersonName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etMiddleName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etFirstName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:hint="Middle name"
                android:inputType="textCapWords|textPersonName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etRollNo"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMiddleName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:hint="Roll No."
                android:inputType="number"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spDivision"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_below="@+id/etRollNo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:prompt="@string/select_division"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spYear"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_below="@+id/spDivision"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:prompt="@string/select_year"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spClassName"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_below="@+id/spYear"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:prompt="@string/select_class_name"
                android:spinnerMode="dialog" />

            <Button
                android:id="@+id/bSaveStudent"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spClassName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:elevation="2dp"
                android:text="Save"
                android:textSize="16sp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
